Update git add index.html

--- a/git add index.html
+++ b/git add index.html
@@ -1,1 +1,6 @@
 git commit -m "initial commmit"
+git remote add originhttps://github.com/ammarditosyafaatt-prog/ammarditosyafaatt.git
+git remote -v
+git branch -M main
+git push -u origin main
+git push
